# aruco

./: .gitignore  CMakeLists.txt  Dockerfile  README_xyz.md  build.sh  run.sh  run_demo.sh
AllRelease/: pub_arucoDealy.sh  pub_calibInstall.sh  runOpti_node.sh
AllRelease/aruco_node/: 026001510032.mvdat  MV-UB31M-Group0.config  run.sh  runMindVision.sh  runRealsense.sh
AllRelease/aruco_node/data/: ARUCO_MIP_36h12_0_m.yml  ARUCO_MIP_36h12_2_m.yml  ARUCO_MIP_36h12_5_5_m.yml  ARUCO_MIP_36h12_5_m.yml  Map8.31.yml  Mindvision_8.24.yml  Realsense-0.5-24.93-8.31used.yml  Realsense_Calib_8.30.yml  mapA4_34_Config_meters.yml  map_25A.yml
AllRelease/aruco_node/data/25h7/: ARUCO_MIP_25h7_1_meters.yml  ARUCO_MIP_25h7_1_pix.yml
AllRelease/aruco_node/data/ARUCO_MIP_25h7/: ARUCO_MIP_25h7 - 1.docx  ARUCO_MIP_25h7_0.yml  ARUCO_MIP_25h7_2.yml  ARUCO_MIP_25h7_m_0.yml
AllRelease/aruco_node/data/ARUCO_MIP_36h12/print_0.2m/: aruco_mip_36h12_00000.docx  aruco_mip_36h12_00001.docx  aruco_mip_36h12_00002.docx  aruco_mip_36h12_00003.docx  aruco_mip_36h12_00004.docx  aruco_mip_36h12_00005.docx  aruco_mip_36h12_00006.docx  aruco_mip_36h12_00007.docx
AllRelease/aruco_node/data/ARUCO_MIP_36h12_5_5/: ARUCO_MIP_36h12_5_5.docx  ARUCO_MIP_36h12_5_5.xps  ARUCO_MIP_36h12_5_5_pix.yml
AllRelease/aruco_node/data/MindVIsion/: MindV_Aruco_InstallCalibResult .bag  m_InstallCalibInput.bag
AllRelease/aruco_node/data/Realsense/: Realsense_8.2_calib.yml  Realsense_InstallCalibResult_8.24.bag
AllRelease/calib_8.30/: default.xml
AllRelease/mocap_node_devel/: .catkin  .rosinstall  setup.sh
AllRelease/mocap_node_devel/lib/mocap_optitrack/: mocap_node
AllRelease/mocap_node_devel/lib/pkgconfig/: mocap_optitrack.pc
AllRelease/mocap_node_devel/share/mocap_optitrack/cmake/: mocap_optitrackConfig.cmake
AllRelease/report/old/: Install Calibration.html  aruco experiment.html
AllRelease/resourse/ARUCO_MIP_25h7/: ARUCO_MIP_25h7.docx  ARUCO_MIP_25h7_1.yml  ARUCO_MIP_25h7_m_1.yml  ARUCO_MIP_25h7_m_2.yml
AllRelease/Ｒealsense-calib/: Map8.31-cam.yml  RealsenseCalibRes-TV-69.5.xml  RealsenseCalibRes1-0.37-24.928.xml  RealsenseCalibRes2-0.5-24.93-8.31used.xml  RealsenseCalibRes4-0.348-25.xml  chessBoard_7_10_25mm.docx  default.xml
aruco_ros/: CMakeLists.txt  EigenLM.cpp  EigenLM.hpp  aruco_ros.cpp  aruco_ros.hpp  package.xml
aruco_ros/plot/: DoAllPlot.sh  all_plot.sh  plotEulerErr.sh  plotEuler_Pitch.sh  plotEuler_Roll.sh  plotEuler_Yaw.sh  plotPositionErr.sh  plotVelocity.sh  plot_x_y_z.sh  plotx.sh  ploty.sh  plotz.sh
data/: Mindvision_8.24_A.yml
data/ARUCO_MIP_36h12/print_0.2m/: aruco_mip_36h12_00000.docx  aruco_mip_36h12_00001.docx  aruco_mip_36h12_00002.docx  aruco_mip_36h12_00003.docx  aruco_mip_36h12_00004.docx  aruco_mip_36h12_00005.docx
src/: CMakeLists.txt  dictionary.h
utils/: aruco_print_marker.cpp  aruco_tracker.cpp
utils_calibration/: aruco_calibration.cpp
utils_markermap/: CMakeLists.txt  MVCamera.cpp  MVCamera.hpp  aruco_create_markermap.cpp  aruco_markermap_pix2meters.cpp  aruco_test_markermap.cpp  package.xml
